Security and Cart fix
