# cart/request/AddToCartRequest.go
@@ -1,7 +1,6 @@
 package request
 
 type AddToCartRequest struct {
-	CustomerID uint   `json:"clientId"`
-	ProductID  uint   `json:"productId"`
-	Size       string `json:"size"`
+	ProductID uint   `json:"productId"`
+	Size      string `json:"size"`
 }
