# docs/swagger.json
@@ -21,6 +21,11 @@
         },
         "/cart/addToCart": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Add Product To Cart",
                 "consumes": [
                     "application/json"
@@ -248,9 +253,6 @@
         "request.AddToCartRequest": {
             "type": "object",
             "properties": {
-                "clientId": {
-                    "type": "integer"
-                },
                 "productId": {
                     "type": "integer"
                 },
@@ -394,6 +396,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
